<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">OMDb</string>
    <string name="all">All</string>
    <string name="any_year">Any year</string>
    <string name="click">Click</string>
    <string name="dropdown_arrow">Dropdown arrow</string>
    <string name="episode">Episode</string>
    <string name="game">Game</string>
    <string name="movie">Movie</string>
    <string name="movie_poster">%s poster</string>
    <string name="no">no</string>
    <string name="no_network_connection">No network connection!</string>
    <string name="selected" tools:ignore="PrivateResource">Selected</string>
    <string name="series">Series</string>
    <string name="title">Title</string>
    <string name="year_type_format">%s | %s</string>
    <string name="year_type_description">year %s, %s</string>
</resources>